# axe

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Makefile  README.md  axe.py  genindex.html  getting-started.html  index.html  objects.inv  pyproject.toml  requirements.txt  runtime.html  search.html  searchindex.js  setup.py  shell.nix  tox.ini
.claude/skills/verify/: SKILL.md
.doctrees/: environment.pickle  getting-started.doctree  index.doctree  runtime.doctree
.doctrees/reference/: cli.doctree  configuration.doctree  runtime.doctree
.doctrees/tutorials/: first-binary.doctree  github-actions.doctree
.github/workflows/: binaries.yml  docs.yml  publish.yml  test.yml
_sources/: runtime.md.txt
_sources/reference/: cli.md.txt  runtime.md.txt
_sources/tutorials/: first-binary.md.txt
axe/: __init__.py  app.py  default_exts.py  errors.py  exceptions.py  http_exceptions.py  text_parsers.py  utils.py
docs/: Makefile  README.md  conf.py  contents.rst.inc  extensions.rst  getting-started.md  grow.rst  index.md  index.rst  make.bat  quick_start.rst  runtime.md
docs/reference/: cli.md  configuration.md  runtime.md
docs/superpowers/specs/: 2026-07-07-axe-design.md
docs/tutorials/: github-actions.md
examples/cowsay/: pyproject.toml
examples/cowsay/src/cowsay/: __init__.py
reference/: cli.html  configuration.html  runtime.html
runtime/: config.go  config_test.go  env_test.go  exec_unix.go  exec_windows.go  execute.go  extract.go  extract_test.go  go.mod  install.go  log.go  main.go  paths.go  self.go  trailer.go  trailer_test.go  uv.go
scripts/: build_stubs.py
src/axe/: __init__.py  build.py  cli.py  config.py  fetch.py  output.py  payload.py  platforms.py  proc.py  resolve.py  trailer.py  wheel.py
taxe/: __init__.py
tests/: test_axe.py  test_basic.py  test_config.py  test_default_ext.py  test_e2e.py  test_fetch.py  test_payload.py  test_platforms.py  test_proc.py  test_resolve.py  test_trailer.py  test_wheel.py
tests/suites/: default_ext.py  hello.py
tutorials/: first-binary.html  github-actions.html
