[project]
name = "axe"
version = "0.2.1"
description = "Zero-friction Python app compiler: ship any Python project as a self-bootstrapping single-file binary."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "soasme", email = "soasme@gmail.com" }]
keywords = ["packaging", "binary", "uv", "pyapp", "distribution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.scripts]
axe = "axe.cli:main"

[project.urls]
Homepage = "https://github.com/soasme/axe"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axe"]
# Stub binaries are git-ignored (built by scripts/build_stubs.py / CI) but must
# ship in the wheel and sdist.
artifacts = ["src/axe/stubs/*"]

[tool.hatch.build.targets.sdist]
artifacts = ["src/axe/stubs/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
